--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   margin: 0;
@@ -10,4 +14,14 @@ body {
   height: 100%;
 }
 
+.van-type.simple.selected {
+  background-color: orange;
+}
 
+.van-type.rugged.selected {
+  background-color: green;
+}
+
+.van-type.luxury.selected {
+  background-color: purple;
+}
